gitea/overlays/dev/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-server
  namespace: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`git.audryus.arpa`)
      services:
        - name: gitea-http
          port: 3000
          scheme: http
  tls:
    secretName: chart-example-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-server-http
  namespace: gitea
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`git.audryus.arpa`)
      priority: 10
      services:
        - name: gitea-http
          port: 3000
          scheme: http
      middlewares:
        - name: redirecttohttps
